--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -60,5 +60,8 @@
     "public-sale-close": "hardhat run scripts/7_public_sale_close.ts",
     "reveal": "hardhat run scripts/8_reveal.ts",
     "withdraw": "hardhat run scripts/9_withdraw.ts"
+  },
+  "dependencies": {
+    "@poanet/solidity-flattener": "^3.0.9"
   }
 }
